language/move-lang/tests/move_check/locals/use_before_assign_simple.exp
error: 

   ┌── tests/move_check/locals/use_before_assign_simple.move:5:13 ───
   │
 5 │         let x: u64;
   │             - The local does not have a value due to this position. The local must be assigned a value before being used
 6 │         let _ = move x + 1;
   │                 ^^^^^^ Invalid usage of local 'x'
   │

error: 

   ┌── tests/move_check/locals/use_before_assign_simple.move:8:13 ───
   │
 8 │         let s: S;
   │             - The local does not have a value due to this position. The local must be assigned a value before being used
 9 │         let _s2 = s;
   │                   ^ Invalid usage of local 's'
   │

error: 

    ┌── tests/move_check/locals/use_before_assign_simple.move:13:13 ───
    │
 13 │         let x: u64;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
 14 │         let _ = x + 1;
    │                 ^ Invalid usage of local 'x'
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_simple.move:16:13 ───
    │
 16 │         let s: S;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
 17 │         let _s3 = copy s;
    │                   ^^^^^^ Invalid usage of local 's'
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_simple.move:21:13 ───
    │
 21 │         let x: u64;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
 22 │         let _ = &x;
    │                 ^^ Invalid usage of local 'x'
    │

error: 

    ┌── tests/move_check/locals/use_before_assign_simple.move:24:13 ───
    │
 24 │         let s: S;
    │             - The local does not have a value due to this position. The local must be assigned a value before being used
 25 │         let _s2 = &s;
    │                   ^^ Invalid usage of local 's'
    │

